Добавлен выбор пользователя в приложение
